Fix layout on mobile

--- a/components/tools/panels/PositionSizePanel.module.scss
+++ b/components/tools/panels/PositionSizePanel.module.scss
@@ -12,3 +12,19 @@
 .numberCell {
   text-align: right;
 }
+
+.gridNoLoss {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.gridWithLoss {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+@media (max-width: 800px) {
+  .gridNoLoss,
+  .gridWithLoss {
+    grid-template-columns: 1fr;
+    grid-row-gap: 2rem;
+  }
+}
